--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
     "nodemon": "^3.1.7",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "web-vitals": "^4.2.4"
   }
 }
