--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "validator": "^13.12.0",
     "web-vitals": "^4.2.4"
